--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "papaparse": "^5.3.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue-select": "^3.11.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -36,6 +39,10 @@
     },
     "rules": {}
   },
+  "eslint.validate": [
+    "javascript",
+    "vue"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
