--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "papaparse": "^5.3.0",
+    "v-lazy-image": "^1.4.0",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vue-select": "^3.11.2"
   },
